--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -3,14 +3,15 @@
 <h6>There are {{product.length}} posts</h6> --}}
 {{#each product}}
 <div class="row">
+    {{#each this }}
         <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-            <img src= '/uploads/{{imagePath}}' />
+            <img src= '/uploads/{{ this.imagePath }}' />
             <div class="caption">
                 <h3>{{title}}</h3>
-                <p class="description">{{description}}</p>
+                <p class="description">{{ this.description}}</p>
                 <div class="clearfix">
-                    <div class="price pull-left">${{price}}</div>
+                    <div class="price pull-left">${{ this.price}}</div>
                     <a href="/shopping/checkout/" class="btn btn-success pull-right" role="button">Add to cart</a>
                     <a href="/shopping/items/{{_id}}" class="btn btn-success pull-right" role="button">info</a>
 
@@ -20,7 +21,7 @@
     </div>
     {{/each}}
 </div>
-<hr>
+{{/each}}
 
 
 
