--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -10,9 +10,9 @@
         <div class="thumbnail">
             ahh thumbnail
             <img src= '/uploads/{{imagePath}}' />
-            ahh img
+            ahh thumnail also???
             <div class="caption"> Some Product yo
-                <div> 
+                <div id = 'h5'> 
                     Text within caption class
                     <h5>yooo</h5>
                     <h5>yooo</h5>
@@ -24,7 +24,7 @@
                     <div class="price">${{price}}</div>
                     <a href="/shopping/checkout/" class="btn btn-success pull-right" role="button">Add to cart</a>
                     <a href="/shopping/items/{{_id}}" class="btn btn-success pull-right" role="button">info</a>
-
+                    </div>
                 </div>
             </div>
         </div>
