add,commit -m, then push 5th change

--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -9,7 +9,8 @@
             ahh this is whatever
         <div class="thumbnail">
             ahh thumbnail
-            <img src= '/uploads/{{imagePath}}' />
+            <p class="photo"><img src= '/uploads/{{imagePath}}' />
+            </p>
             ahh thumnail also???
             <div class="caption"> Some Product yo
                 <div id = 'h5'> 
