--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,17 @@
 body {
-  background-color: orange;
   display: flex;
   flex-direction: column;
-  justify-content: center; }
+  justify-content: center;
+  background-color: orangered; }
+
+.photo {
+  height: 100%;
+  width: 100%; }
 
 .whatever {
   height: 100%;
   width: 100%;
+  color: blue;
   display: flex;
   flex-flow: column;
   align-items: center; }
@@ -14,7 +19,11 @@ body {
 .something {
   display: flex;
   flex-flow: column;
-  align-items: center; }
+  align-items: center;
+  color: white;
+  max-width: 100%;
+  max-height: 100%;
+  background-image: repeating-linear-gradient(-30deg, transparent 2%, transparent 2%, orangered 20px, black 40px); }
 
 .container {
   background-color: crimson; }
@@ -31,10 +40,6 @@ body {
 .body {
   max-height: 100%;
   max-width: 100%; }
-
-.something {
-  display: flex;
-  background-color: lime; }
 
 .caption {
   background-color: white;
