--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -2,11 +2,16 @@ $primary-color: black;
 $secondary-color: purple;
 
 body {
-  background-color: orange;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  background-color: orangered;
 
+}
+
+.photo {
+  height: 100%;
+  width: 100%;
 }
 
 .whatever {
@@ -19,7 +24,16 @@ body {
 .something {
   display: flex;
   flex-flow: column;
-  align-items: center; }
+  align-items: center;
+  color: white;
+  max-width: 100%;
+  max-height: 100%;
+  background-image: repeating-linear-gradient(-30deg,
+  transparent 2%,
+  transparent 2%,
+  orangered 20px,
+  black 40px);
+}
 
 .container {
   background-color: crimson; }
@@ -37,9 +51,6 @@ body {
   max-height: 100%;
   max-width: 100%; }
 
-.something {
-  display: flex;
-  background-color: lime; }
 
 .caption {
   background-color: white;
