--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,64 +1,76 @@
-body {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  background-color: orangered;
-  max-width: 100%; }
-
-.photo {
-  height: 70vh;
-  width: 150vw;
-  max-height: 100%;
-  max-width: 100%;
-  margin: 0px;
-  padding: 0px;
-  display: flex;
-  flex-shrink: 1; }
-
-.whatever {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-flow: column;
-  align-items: center; }
-
-.something {
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  color: white;
-  max-width: 100%;
-  max-height: 100%;
-  background-image: repeating-linear-gradient(-30deg, transparent 2%, transparent 2%, orangered 20px, black 40px); }
-
-.container {
-  background-color: crimson; }
-
 .thumbnail {
-  background-color: yellowgreen;
-  color: white;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-end;
-  justify-content: center;
-  height: 70vh;
-  width: 150vw;
-  max-width: 100%; }
+  color: blue;
+  background-color: blue; }
 
 .body {
-  max-height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: #73ff00;
   max-width: 100%; }
 
-.caption {
-  background-color: white;
-  border-color: yellow;
+.infobox {
+  background-color: gray;
+  border-color: #c40707;
   border-style: double;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  align-items: center;
-  text-align: center; }
+  align-items: flex-end;
+  text-align: center;
+  height: 50vh;
+  width: 50vw; }
+
+div.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 100%;
+  color: #2114cf;
+  background-color: #02020f; }
+
+div.rowframe {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  max-width: 100%; }
+
+div.photoborder {
+  max-width: 100%;
+  background-color: blue;
+  display: flex;
+  flex-direction: row;
+  justify-content: center; }
+
+div.col-sm-4 {
+  color: limegreen;
+  background-color: purple;
+  display: flex;
+  flex-direction: row;
+  max-width: 100%;
+  justify-content: space-around;
+  align-content: center; }
+
+div.container {
+  color: red; }
+
+.photo {
+  background-color: yellowgreen;
+  color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+  height: 70vh;
+  width: 150vw;
+  max-width: 100%; }
+
+body {
+  max-height: 100%;
+  max-width: 100%;
+  background-color: blue;
+  color: #040408; }
 
 h5 {
   background-color: #2BFF00;
