--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -1,22 +1,20 @@
 <div class="row">
     <div class="col-md-4 col-md-offset-4">
-        <<h1>Sign up</h1>
-        <form action="/user/sign_up" method="post">
-            <div class="form-group">
-                <label for="email">E-mail</label>
-                <input type="text" id="Email" name="email" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="password"></label>
-                <input type"password" id="password" name="password" class="form-control">
-            </div>
+        <h1>Sign Up for freshness</h1>
+        {{#if hasErrors}}
+        <div class="alert alert-danger">
+            {{#each messages}}
+            <p>{{this}}</p>
+            {{/each}}
+        </div>
+        {{/if}}
+        <form action="/user/sign_up" method="POST">
+        <div class="form-group">
+        <label for="email">E-Mail</label>
+        <input type="text" id="email" name="email" name="password" class="form-control">
+        </div>
+        <input type="hidden" name="_csrf" value="{{ csrfToken }}">
+        <button type="submit" class="btn btn-primary">Sign Up</button>
         </form>
     </div>
 </div>
-
-<form action="/" method="POST">
-  <input type="hidden" name="_csrf" value="{{csrfToken}}">
-  
-  Favorite Food: <input type="text" name="favoriteFood">
-  <button type="submit">Submit</button>
-</form>
