code for sensible driving and yielding to pedestrians

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,12 +2,27 @@
   color: blue;
   background-color: blue; }
 
-.body {
+#body {
+  margin: 0;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  text-align: center;
+  background-color: #653086;
   display: flex;
-  flex-direction: row;
   justify-content: center;
-  color: #73ff00;
-  max-width: 100%; }
+  flex-direction: column;
+  background-color: brown; }
+
+img {
+  width: 30vw;
+  height: 100vh;
+  max-height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-end; }
 
 .infobox {
   background-color: gray;
@@ -24,16 +39,31 @@
 
 div.row {
   display: flex;
-  flex-direction: row;
+  flex-flow: wrap;
   justify-content: center;
   max-width: 100%;
-  color: #2114cf;
-  background-color: #02020f; }
+  width: 70vw;
+  color: #6b14cf;
+  background-color: #02020f;
+  justify-items: left;
+  margin: 0;
+  align-self: center; }
+
+div.row1 {
+  background-color: #d39e00;
+  color: pink;
+  height: 70vh;
+  width: 70vw;
+  display: flex;
+  border-style: dashed;
+  border-width: 10px;
+  text-align: center; }
 
 div.rowframe {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 60vw;
   max-width: 100%; }
 
 div.photoborder {
@@ -43,63 +73,29 @@ div.photoborder {
   flex-direction: row;
   justify-content: center; }
 
-div.col-sm-4 {
-  color: limegreen;
-  background-color: purple;
-  display: flex;
-  flex-direction: row;
-  max-width: 100%;
-  justify-content: space-around;
-  align-content: center; }
-
 div.container {
-  color: red; }
-
-.photo {
-  background-color: yellowgreen;
-  color: white;
+  text-align: center;
+  background-color: orange;
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: center;
-  height: 70vh;
-  width: 150vw;
-  max-width: 100%; }
+  flex-flow: column;
+  border-style: solid;
+  border-color: darkturquoise;
+  -webkit-border-after-style: double;
+  -webkit-border-after-width: thick;
+  -webkit-border-after-color: brown; }
 
-body {
-  max-height: 100%;
-  max-width: 100%;
-  background-color: blue;
-  color: #040408; }
+div.container1 {
+  display: flex;
+  color: #1100ff;
+  background-color: white;
+  flex-direction: column;
+  border-style: dashed;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  max-width: 70%;
+  padding-left: 30%; }
 
 h5 {
   background-color: #2BFF00;
   color: blue; }
-
-.description {
-  display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
-  background-color: blue; }
-
-.price {
-  background-color: white;
-  color: crimson;
-  display: flex;
-  flex-direction: column;
-  align-content: center;
-  height: 5vh; }
-
-@media (max-height: 500px) {
-  .thumbnail {
-    flex-flow: column;
-    justify-content: space-between;
-    background-color: green;
-    transition: .2; } }
-
-@media (max-width: 500px) {
-  .thumbnail {
-    flex-flow: column;
-    justify-content: space-between;
-    background-color: green;
-    transition: .2s; } }
