--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -18,8 +18,9 @@
    <div class="col-sm-4">col 3</div>
  </div>
  </div>
- <div class="container1">
- {{{body}}}</div>
+ <div class="container1"><div id="body">{{{body}}}</p>
+ </div>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
