--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -19,7 +19,7 @@
           Account Management
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="/user/sign_up">Sign in</a>
+          <a class="dropdown-item" href="/user/signup">Sign in</a>
           <a class="dropdown-item" href="#">Register</a>
           <a class="dropdown-item" href="#">Edit profile</a>
         </div>
