--- a/views/user/signup.hbs
+++ b/views/user/signup.hbs
@@ -8,10 +8,13 @@
             {{/each}}
         </div>
         {{/if}}
-        <form action="/user/sign_up" method="POST">
+        <form action="/user/signup" method="POST">
         <div class="form-group">
         <label for="email">E-Mail</label>
-        <input type="text" id="email" name="email" name="password" class="form-control">
+        <input type="text" id="email" name="email" class="form-control">
+        </div>
+        <div class="form-group">
+            <input type="password" id="password" password="password" class="form-control"> 
         </div>
         <input type="hidden" name="_csrf" value="{{ csrfToken }}">
         <button type="submit" class="btn btn-primary">Sign Up</button>
